[gd_scene load_steps=7 format=2]

[ext_resource path="res://torch_full.gd" type="Script" id=1]
[ext_resource path="res://scenes/torch_wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://torch_fire.tscn" type="PackedScene" id=3]
[ext_resource path="res://torch_light.tscn" type="PackedScene" id=4]

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.11
bottom_radius = 0.11
height = 0.01

[sub_resource type="CapsuleShape" id=2]
radius = 0.15
height = 0.8

[node name="torch_full" type="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.987, 3.964, -3.362 )
script = ExtResource( 1 )

[node name="torch_wall" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00022006, 0, 0 )

[node name="torch_fire" parent="torch_wall" groups=[
"fire_sources",
] instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, -0.3, 0.3, 0 )

[node name="torch_light" parent="torch_wall" groups=[
"light_sources",
] instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.32, 0.508, 0 )

[node name="MeshInstance" type="MeshInstance" parent="torch_wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0.3, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, -0.298925, 0.146897, -0.00822401 )
shape = SubResource( 2 )
